--- a/books_springboot/four_seasons/src/main/resources/application.yaml
+++ b/books_springboot/four_seasons/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
+server:
+  port: 8080
+  servlet:
+    context-path:
+  address: 127.0.0.1
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/db_book_manager?useUnicode=true&characterEncoding=utf8&useSSL=false
